# QQ-Agent-Bridge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  config.example.yaml  config.test.yaml  dry_run.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
.superpowers/sdd/: review-global-r1-fix.md  review-global-r2-fix.md  review-global-r3-fix.md  task-2-fix-r2-report.md  task-2-fix-r3-report.md  task-2-fix-r4-report.md  task-2-fix-r5-report.md  task-2-fix-r6-report.md  task-2-fix-report.md  task-3-fix-r2-report.md  task-3-fix-report.md  task-3-report.md  task-4-report.md  (+10 more)
docs/: PUBLISHING.md
scripts/: check_whisper_cpp.sh  install_whisper_cpp.sh
tests/: __main__.py  conftest.py  test_agent_capability_eval.py  test_agent_e2e.py  test_agent_runtime.py  test_agent_trace.py  test_animated_image.py  test_app_async.py  test_artifact_delivery.py  test_attachment_cache.py  test_capability_eval.py  test_cli_smoke.py  test_command_access_store.py  test_command_help.py  test_config.py  test_config_block_store.py  test_cursor_adapter.py  test_deployment_docs.py  test_long_term_memory.py  test_long_term_memory_app.py  test_memory.py  test_memory_commands.py  test_memory_curation.py  test_memory_e2e.py  test_memory_retrieval.py  test_memory_review.py  test_onebot.py  test_outgoing_resources.py  test_output_guard.py  test_policy.py  test_proactive.py  test_progress.py  test_progress_directives.py  test_prompting.py  test_redact.py  test_replies.py  test_resources.py  test_resources_e2e.py  test_runtime_skill.py  test_schedule_app.py  (+11 more)
(+90 files in other folders)
