[project]
name = "qq-agent-bridge"
version = "0.1.0"
description = "QQ bridge for AI agent runtimes"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "attrs==26.1.0",
    "frozenlist==1.8.0",
    "idna==3.18",
    "iniconfig==2.3.0",
    "multidict==6.7.1",
    "packaging==26.2",
    "pluggy==1.6.0",
    "propcache==0.5.2",
    "Pygments==2.20.0",
    "pytest==9.1.1",
    "python-dateutil==2.9.0.post0",
    "PyYAML==6.0.3",
    "six==1.17.0",
    "types-PyYAML==6.0.12.20260518",
    "websockets==16.0",
    "yarl==1.24.2",
]

[tool.uv]
package = false
